Fixed wrap issue with images

--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@ body {
     margin: 0;
     min-height: 100vh;
     display: flex;
-    flex: auto;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
+
     
 }
 
@@ -13,7 +13,6 @@ body {
     background-color: #1F2937;
     display: flex;
     flex-wrap: wrap;
-    flex: 1 0 1; 
     flex-direction: column;
     max-height: 500px;
     padding-bottom: 2%;
@@ -21,7 +20,6 @@ body {
 
  .lower {
     display: flex;
-    flex: 0 1 0; 
     justify-content: space-between;
     gap: 15px; 
     
@@ -30,7 +28,6 @@ body {
 .upper {
     padding-bottom: 70px;
     padding-top: 25px;
-    flex: 0 1 0; 
     display: flex;
     justify-content: space-between;
 }
@@ -39,7 +36,6 @@ body {
     padding-left: 10%;
     font-weight: bold;
     display: flex;
-    flex: none;  
     align-items: center;
     justify-content: flex-start; 
     color: #f9faf8;
@@ -49,7 +45,6 @@ body {
 }
 ul {
     display: flex;
-    flex: none; 
     align-items: center;
     justify-content: space-between;
     list-style-type: none; 
@@ -70,7 +65,6 @@ a {
     max-width: 45%;
     display: flex;
     flex-direction: column;
-    flex: 1; 
     align-items: flex-start;
     align-self: center;
     justify-content: flex-start;
@@ -92,7 +86,6 @@ button {
 
 .header img {
     max-width: 30%;
-    flex: none;  
     height: 300px;
     width: 500px;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
@@ -109,7 +102,6 @@ button {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     max-height: 500; 
-    flex: none; 
     padding-bottom: 2%
 }
 
@@ -129,10 +121,9 @@ button {
 
 .images {
     display: flex;
-    flex: none; 
     justify-content: center;
-    flex: none; 
     gap: 150px; 
+    flex-wrap: wrap;
 }
 
 .info {
@@ -190,7 +181,6 @@ button {
     border: 2px solid white;
     border-radius: 50%;
     padding: 5px 10px;
-    flex: none; 
 }
 
 .footer{
